# tdg

./: .codecov.yml  .env.example  .flake8  .gitignore  AGENTS.md  AGENT_INSTRUCTIONS.md  AI_ENHANCEMENTS.md  API  ARCHITECTURAL_CHANGES.md  BROWNFIELD_ARCHITECTURE.md  BROWNFIELD_ARCHITECTURE_COMPREHENSIVE.md  BROWNFIELD_PRD.md  CLERK_INTEGRATION.md  COVERAGE_REPORTS.md  DEPLOYMENT.md  Dockerfile  GENERATION_SERVICE_ARCHITECTURE.md  GIT_HOOKS.md  HYBRID_PROVIDER.md  LICENSE  Makefile  PROGRESS_TRACKING.md  README.md  SENTRY_SETUP.md  TESTING_REQUIREMENTS.md  TESTING_STRATEGY.md  Testing  WEBSOCKET_PROGRESS.md  demo_ai_enhancements.py  fly.toml  mock_server.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup_env.sh  summary.json  test-results.html  test-results.xml  test_ai_generation.py  (+4 more)
.bmad-core/: install-manifest.yaml
.bmad-infrastructure-devops/: install-manifest.yaml
.github/: branch-protection.yml
app/: __init__.py  config.py  main.py  progress.py  schemas.py  sentry.py  websocket_manager.py
examples/: complex-example.json  javascript_test_example.js  petstore.json  postman_from_json.py  python_test_example.py
scripts/: README.md  ci_monitor.py  install-hooks.sh  post_push_monitor.py  pre_push_analysis.py
simple-tests/: summary.json
test-current/: summary.json
test-debug/: summary.json
test-extract-service/: summary.json
test-fixed-depth/: summary.json
test-improved/: summary.json
test-multi-method/: summary.json
test-robust/: summary.json
test-system-zip/: summary.json
tests/: __init__.py  demo_ai_enhancements.py  (+14 more)
(+76 files in other folders)
